added rename gem

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,23 +5,23 @@
 
 
   <li>
-    ABOUT
+    what's UP
   </li>
 
    <li>
-    SCHEDULE
+    theLOCALE
   </li>
 
    <li>
-    VENUE
+    theTALENT
   </li>
 
    <li>
-    FAQ'S
+  QandA
   </li>
 
    <li>
-    REGISTER
+    I'M in!
   </li>
 
 </div>
